fix: try accessing host ip

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -33,7 +33,8 @@ spec:
       NODE_IP:
         valueFrom:
           fieldRef:
-            status.hostIP
+            apiVersion: v1
+            fieldPath: status.hostIP
     customConfig:
       data_dir: /vector-data-dir
       api:
