--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -43,7 +43,7 @@ spec:
     customConfig:
       data_dir: /vector-data-dir
       api:
-        enabled: false
+        enabled: true
       sources:
         kubernetes_logs:
           type: vector
