try disabling port

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -72,8 +72,7 @@ spec:
           healthcheck:
             enabled: false
     service:
-      enabled: true
-      type: NodePort
+      enabled: false
   postRenderers:
     - kustomize:
         patchesJson6902:
