try getting vector working

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -71,6 +71,10 @@ spec:
           type: splunk_hec_logs
           healthcheck:
             enabled: false
+    containerPorts:
+      - name: vector
+        port: 6010
+        protocol: TCP
     service:
       enabled: true
       type: NodePort
