fix spec of container port

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -73,7 +73,7 @@ spec:
             enabled: false
     containerPorts:
       - name: vector
-        port: 6010
+        containerPort: 6010
         protocol: TCP
     service:
       enabled: true
