--- a/clusters/production/monitoring/vector/agent/helm.yaml
+++ b/clusters/production/monitoring/vector/agent/helm.yaml
@@ -34,7 +34,7 @@ spec:
     customConfig:
       data_dir: /vector-data-dir
       api:
-        enabled: false
+        enabled: true
       sources:
         kubernetes_logs:
           type: kubernetes_logs
