feat: include app name in k8s logs

--- a/clusters/production/monitoring/vector/aggregator/helm.yaml
+++ b/clusters/production/monitoring/vector/aggregator/helm.yaml
@@ -66,6 +66,7 @@ spec:
             codec: json
             only_fields:
               - container_name
+              - custom_app_name
               - kubernetes.pod_namespace
               - message
           endpoint: http://$NODE_IP:8088
