--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ clusters/production/monitoring/kube-prometheus-stack/values.yaml
 clusters/production/gitlab-runner/secrets.yaml
 clusters/production/gitlab-runner-lrz/secrets.yaml
 clusters/production/monitoring/vector/aggregator/secrets.yaml
+clusters/production/network/secrets.yaml
