--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: monitoring
+  name: network
   namespace: flux-system
 spec:
   interval: 10m
