feat: add ingress

--- a/clusters/production/istio/istio-rule.yaml
+++ b/clusters/production/istio/istio-rule.yaml
@@ -41,3 +41,14 @@ spec:
   trafficPolicy:
     tls:
       mode: ISTIO_MUTUAL
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: tailscale-mtls
+  namespace: network
+spec:
+  host: tailscale-webhook-service.portal.svc.cluster.local
+  trafficPolicy:
+    tls:
+      mode: ISTIO_MUTUAL
