add missing image pull secrets

--- a/clusters/production/network/deployment.yaml
+++ b/clusters/production/network/deployment.yaml
@@ -21,6 +21,8 @@ spec:
       labels:
         app: tailscale-webhook
     spec:
+      imagePullSecrets:
+        - name: regcred
       securityContext:
         fsGroup: 1000
         runAsUser: 1000
