--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -134,6 +134,7 @@ spec:
           name: hm-monitoring
           key: additional-scrape-configs.yaml
         replicas: 1
+        shards: 3
         replicaExternalLabelName: __replica__
         externalLabels:
           cluster: hm-edu
