--- a/clusters/production/gitlab-runner/gitlab-runner.yaml
+++ b/clusters/production/gitlab-runner/gitlab-runner.yaml
@@ -43,11 +43,30 @@ spec:
     rbac:
       create: true
       rules:
-        - resources: [ "pods/attach", "pods/exec"]
-          verbs: [ "create", "patch", "delete"]
-        - resources: [ "pods", "services" ]
-          verbs: [ "get", "watch", "create", "delete"]
-        - resources: [ "configmaps", "secrets"]
-          verbs: [ "get", "create", "update", "delete"]
-        - resources: [ "serviceAccounts"	]
-          verbs: [ "get"]
+        - resources:
+          - pods/attach
+          - pods/exec
+          verbs:
+          - create
+          - patch
+          - delete
+        - resources:
+          - pods
+          - services
+          verbs:
+          - get
+          - watch
+          - create
+          - delete
+        - resources:
+          - configmaps
+          - secrets
+          verbs:
+          - get
+          - create
+          - update
+          - delete
+        - resources:
+          - serviceAccounts
+          verbs:
+          - get
