--- a/clusters/production/monitoring/vector/agent/helm.yaml
+++ b/clusters/production/monitoring/vector/agent/helm.yaml
@@ -53,5 +53,7 @@ spec:
           version: "2"
     service:
       enabled: false
+    serviceHeadless:
+      enabled: false
     securityContext:
       privileged: true
