--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -168,7 +168,8 @@
         "renovate/helm",
         "renovate/patch"
       ],
-      "automerge": true
+      "automerge": true,
+      "ignoreTests": true
     }
   ]
 }
