--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -169,7 +169,9 @@
         "renovate/patch"
       ],
       "automerge": true,
-      "ignoreTests": true
+      "ignoreTests": true,
+      "automergeType": "pr",
+      "platformAutomerge": true
     }
   ]
 }
