--- a/clusters/production/portal/backend/portal.yaml
+++ b/clusters/production/portal/backend/portal.yaml
@@ -197,7 +197,7 @@ spec:
       containers:
         - args:
             - --sectigo_user
-            - "fritterh"
+            - "hm-pki-portal"
             - --sectigo_customeruri
             - "DFN"
             - --ssl_org_id
