fix: try fixing oauth

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -1,55 +1,25 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: grafana-admin
-    namespace: default
-stringData:
-    admin-user: ENC[AES256_GCM,data:/ZfGWIjqHA==,iv:2skYmT8W4SJ18l7viI9QJd4+X1ORz9fVIw3V4Ob2adg=,tag:rKD9ftUyCB5ejhe5NxQS1g==,type:str]
-    admin-password: ENC[AES256_GCM,data:xKevRMk=,iv:CXcn7GdRI10bYrnJYbjmv87bQn8sUWsPk2FxQfPJRCA=,tag:c6Kk0dl9n7MeuYA2gf+Zng==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
-          enc: |
-              -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6SHpYdFRaaVF5c3FhbjJJ
-              a3JJTWZ4UWJvbFdKdlRONDB6eHZlMUs0SzBvCjdmWjNEZGtmK2NsemtVazRRVko5
-              T3EwYndDNEw4WVBJRWJGV0l5ejNMdXMKLS0tIHlqYm1yY1FHSUk5NlNYRVc0MGNi
-              SjRVUXZvdUlkNFNZUGZkR2EyWWpIQ2MKDj8EBbBnorrU+v9yBw8C73QBhwn2Ki1m
-              wxCfuAKtQjh5cJIJsFNCgoPZzJS9cROH4fPga05Sk/OKdSW4OEFMfQ==
-              -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-10-21T11:20:19Z"
-    mac: ENC[AES256_GCM,data:9eeqHUgi5XfBxK7cXdHpfh85PCeKUtluzqYDbfvZ+5Lv1X1nb16fHTYZe93wOlURdgjZfsmiKJ2VVRqDaMFawAGJHVKT9eu1hxbaO/RmNJ6yM9yanA56e+4ihTwH6cbQ9pXe8WotZC5JvIKtofeKj7IfYF/+E3+bLxBQDfjgHQs=,iv:CUPoCqwgZL6NpnjCe8JS04RiKoFmNNkxXHDFTHdjaZs=,tag:QvmKLyH8PPnebVfWMDRA+g==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
----
-apiVersion: v1
-kind: Secret
-metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_UNIFIED_ALERTING_ENABLED: ENC[AES256_GCM,data:IbZAHA==,iv:msJ/pefWIYW0YZtlMV+6gw3wD4pjKsZA2aLtJGHPN6U=,tag:v2MjHIjbOA96Qqhf9PSkHg==,type:str]
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:AogDCQ==,iv:GeJXtNdXyhaAHCD4I4TxuvgLZ8XScLdHT6n1uFBHFEw=,tag:RBtl6OPXTh2QjIuXPPZFng==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:oFvywQtVpcV6LkWclSs=,iv:5hEqhKbTmi1egLVgmrdtj4SZdBpsKJOrryRtosWUUTk=,tag:Okt7PBjTY+9l5weXg6AMLA==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:/s8iTWFtkmfCNntgRjY=,iv:YXBoyrwXYFWmxNrIRZZCMghxhCQbUogHLAypQIM9Y8Y=,tag:SCWD2uafAoU6//to4WPwMA==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:X+t2lvJ6LA==,iv:8R7KIJhyJu7+sesHj42f+tnvF1zHGtbOHHFBvvRldPs=,tag:NZqO6nh4TcE4jZusaaW78A==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:Ay0vHQ==,iv:axQgVIdmUN+bGRmPFJ4cFw6Um0thOEPELtvtqm1EGxE=,tag:WSQJCRf8vU68DUl6prwtjQ==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:hOF1gOQiGQ==,iv:2zrPCovkxBED46LDD+Gt7/Ybo/sBM7Gu9u4Oc7M7Aic=,tag:DmyICc+AjS4m2q5JSjPXqw==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:BJOVy44QOw==,iv:hJv0ab3Qdh9+dgpCfCB3NkKePpzM08jdeQlHygDPn4Y=,tag:a391Etby9TP8anaUT65w7g==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:YjgFqWhJ,iv:zVzd6ow00k4tL6ck6hcYzOFSADqAPe0TLimD/Es3AMo=,tag:Pye8slFdj+gJLpbnZYuwAA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:ZgL+EA==,iv:bLOrJqnEpQc2+ddcXNi81XL96obq3Iau8a30mxvZlBs=,tag:i/71HDblZwrAvUCXAGhwVg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:pERzVO4=,iv:pThyFSvXCC1aofrp8FTXfRWK94HXyBtC0Nc1hQDXTj8=,tag:xEE2kOqPynk3+BuJE4Er3g==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:A71KuQG0OZLBwyBVw4xtYe4myrQLWn/PFhbwCIA=,iv:KxdaZKDRYdltt9sThI6J5otUI9DLZac0d+GsBRSoV30=,tag:AxeJQNlxMxmIdRYTa70Czg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:VbZUWN/Qg1+w6Ow35wHD+RWSJ8i0OEb0ovlDfpP2fVGEhv+s,iv:FMMWtZ6P4m8VSqGZNaNV+YcJWs4M04hV39ZcmGGS+Po=,tag:Vr4Gy0k9D5BbKjV3A1AroQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:P0p7fYIU4e45Yfqn0JBMXVl9chA=,iv:Htb/suw7Yveq1DV/ZXnySLjE7MIl0HaDCOoxhL/7IGY=,tag:KRSiJJE55DU9cdvlLu7vcg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:WLWKQ2xZjZZvQwygn3ltvtaJI3VcqZbrvWYLll2YM0P8ibw+HV55+nyOcekP,iv:gpfU+0PAJQgc9tA1ula8tpb1pNDFyRNqPdzRK0+xw/0=,tag:Hm81LH6kMdCaQaGmqHFgaA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:3TpQHI5Rxp9Rlvcf+9/91mnH6mkTdREtoRSMiFX5lfLCzh0QWGNY5a0=,iv:v/CZ1w2IPr1xuQlQrxqlQpsC1yKA0ZaMvGaKabxU6hQ=,tag:7zmsEnQiH8mxzQubO+30bQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:drcNWAFzmF7P/6tXqvgdVWmXzst5i6eyfnYtksBgkyqAS+CrgByeDeG1Ync=,iv:AA+e7cwrQfcqyEIoCEMMmEnb4OqV3pMVjsDtZYZe2H0=,tag:CTB/qpTUNU3Kf+A+Iobtww==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:1/XASQ==,iv:qGMR43QFVTmSB//VQI5pN/v22M4EwokOj8AFWFGsqS8=,tag:5BWn0Nvz/wlPXtOLFq4wiw==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:0bVIknadAhfXQLyEtLQ=,iv:qJcfaczwbzBn7A/vZtGrSzCg3qfKT48o4CFoP+hzSIk=,tag:P/DLU5jNbvIEf7q5HPHMig==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:dz2zy3ZOKE6oQWeDIu4=,iv:dL4GKsoDzxhtH2J51w2dsxWM1m4BE7nfTyS/t2ybZt0=,tag:6hf6dYJGnpF87K4rHUu8bg==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:Ef0JayCy4g==,iv:m7a+JP1OlfR38zEGI/gvhBWAc+EDUVVgdjvUhp3tIKI=,tag:LBeEEQJsiNCpO8b3ucF5Uw==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:o8gssw==,iv:FfPKQ7nMgIk/k1RThr/KcVc+GOrQxwr86P8E5G7oV2s=,tag:lLM5RFFTYxjsiUKbHj3YZg==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:wSMRnIlidw==,iv:k9fJddqYOW+LnUEpodJUvLkqSnLRiZEkC9eyqJBE1PA=,tag:daUZ+X+TbLYpSHpmEJI3uA==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:8oejeqMZhw==,iv:eHlQO4NGtgpnX1NxmvOeLL/HsDHNUjMB1iEEik1gUes=,tag:m+oz+geGjN2FKC+cBQG8YA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:R8nipT60,iv:7ACMgYFFR6XBI4RsUAse3EZWPvvVHK1l/3/dZrUmgec=,tag:Zqx7stHv7nie+08QB9sv4Q==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:X8W7RA==,iv:EU746LVj7398nmAD3lj/16/jFCZVCDNoBYlNwfVEvpM=,tag:ok/T7CjRmS2DWBs3TBJxRA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:cqIOPQ==,iv:3ldoCxVM2e7Bx/lbCwE7m9L+ybn7nbdFaJNu6ibdzvc=,tag:Awrz0bXFZOuIeHCyzvOUAg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:a/JtLdIVsTC/9sE6obOjdeSUuACs9ZAEdSGMy64=,iv:EO8qW0MSxsvHeQgcvCvvVh48I/Sq9xjwIO4rxAgqk6w=,tag:dPGbTokECTg5NJcOshyTZA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:IFtKz3Z141uZt1wnTwIGE6S75SDaiS07lyb2GBL6FipE+jAw,iv:/z2Km+2DVsmKHZ4+fbxRhPZJgkgFfIVVatjnZx1ZIJg=,tag:lIuvoeg+8BjW99dL+LXXfw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:5fvBSYjCnYQUcWtub83LV7J+vnM=,iv:DKQ0wzjGAuxjNBR6E3eMbb9a38h2I5h4mYh+x0M5/jk=,tag:zSAHzkQTeAOXYXR9BUyILA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:93JmVV3ZZc46EIMVJr45u+cgaw7qoYKpXXxR0yXk5lAonf6nUeLW2Uc6US/J,iv:XRBzrziCRBGC7lwWEnUJARiagciHojg/QbA1zrZxG78=,tag:rvzL1LCgW/5CCftl48lyzw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:jmUTasWxk69CkpusWd/uX+6zlpxtC0FDTpPq5MzdtUIBSd3K2UNP5eY=,iv:BBWvGiX1BhcseEubam/dw/vzm+QVlfO+iNZG5qWIhCQ=,tag:Qa7E3jvwyOxe6iifME5Kzw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:PUz0p/ixJ+y+/ENVo2hoCBa6d3CXOVW90uafnkPEZPcSqfd/UdvnNmG5QX0=,iv:9Jp914P6HsEPUGIiqr/nI5b50ih97ykl+ENnRMPz3Ao=,tag:1/4nXPru/J7JX9DbOqa2cw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -59,14 +29,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzdkFNQ0hDL3FkMXZSQm4y
-            SFhISVV0anFnUDdiRmpjU1gyR2IwSUFpL3hRCkQ0TjhkRGgzTlNqNEpsaWRHU004
-            eGVFVVZzbVRkamFnRm1wR2hhbkIxZkEKLS0tIGlia1Y2WU9oSFM1K041V1NpaC80
-            THpFelgvL2cvZmZqZ1h2V2xXMjE0bUkKA9SrcZ99lm3sx5rkr4+ka/KpVZ6K8FZP
-            06Zm1geaBB3gbR/Kz0sIUnrWfxN9hysZyAZwwA8MD837atQkcG6GjA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKMk1MTTJjSFRsSWJoRTRn
+            UXJRbjJBU05wMldqeG9iaXRxaGRWaE1SQVNRCmQ3Mm5mWjRmcWVsVGlsYWljYmxa
+            NHVFWkpycG9jZUlvTDVPSy84akdsYTQKLS0tIEpqcVFNSHZxRkhZdXZIaExlZHZC
+            UEYvRnZvblJXaGsyK2pXRzVCOWUyYU0KQvQIJVqAYLgVtndcI1OebraC9TbezOVV
+            9DNNFKd86nrrVG5jGlV0wiIZGbaYv83X0ttzKQBw/czetXGgzKHuCg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-09T17:38:59Z"
-    mac: ENC[AES256_GCM,data:M8UOUCuAGhBYw68ixxTuzTpzhcjNZxM4LRNNb8xNnznM91uYlGPeVtG2giNpxHn6u7P7OUxZMEuqmBzqQ7Fd+OMQudC0GriEpbw/XvppVZ4Fgk+pHBk7rrLrJbMtK6lmJD7yLvZnEeXG57UUDSs8OrC4ea54PnEyKS1p84QyxW4=,iv:zBz9yGtt0kNPFq3tJY6RRoNm6BR2oPWDkZ6BsVCIS4k=,tag:27NjlH3mdnFRT0MYEBkaTg==,type:str]
+    lastmodified: "2023-07-01T05:53:55Z"
+    mac: ENC[AES256_GCM,data:k3DugIzWUg/VNBZ7J4DudM/THqWiYXcnuOUhHS6XRtVzyRZLj2Q9qHzHJqee2uZUO2qc5Wb5+rqk8gb8MqRGbJfk0ajue66OFE/n1NWR1eNLT+LZ5NYZbeWAp+wKDWqS6nLmMePmuCg7f6qV4WCx9Aygj3OULtatfW4jQnhvH3A=,iv:Rv7YmevgANV0VE8lb0In6Z+Sdhodbh9y8o2r2WJ+kAE=,tag:vu2ul1H/BS52tUhFxBtEpA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
