fix: disable signup

--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -4,22 +4,22 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:1/XASQ==,iv:qGMR43QFVTmSB//VQI5pN/v22M4EwokOj8AFWFGsqS8=,tag:5BWn0Nvz/wlPXtOLFq4wiw==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:0bVIknadAhfXQLyEtLQ=,iv:qJcfaczwbzBn7A/vZtGrSzCg3qfKT48o4CFoP+hzSIk=,tag:P/DLU5jNbvIEf7q5HPHMig==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:dz2zy3ZOKE6oQWeDIu4=,iv:dL4GKsoDzxhtH2J51w2dsxWM1m4BE7nfTyS/t2ybZt0=,tag:6hf6dYJGnpF87K4rHUu8bg==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:Ef0JayCy4g==,iv:m7a+JP1OlfR38zEGI/gvhBWAc+EDUVVgdjvUhp3tIKI=,tag:LBeEEQJsiNCpO8b3ucF5Uw==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:o8gssw==,iv:FfPKQ7nMgIk/k1RThr/KcVc+GOrQxwr86P8E5G7oV2s=,tag:lLM5RFFTYxjsiUKbHj3YZg==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:wSMRnIlidw==,iv:k9fJddqYOW+LnUEpodJUvLkqSnLRiZEkC9eyqJBE1PA=,tag:daUZ+X+TbLYpSHpmEJI3uA==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:8oejeqMZhw==,iv:eHlQO4NGtgpnX1NxmvOeLL/HsDHNUjMB1iEEik1gUes=,tag:m+oz+geGjN2FKC+cBQG8YA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:R8nipT60,iv:7ACMgYFFR6XBI4RsUAse3EZWPvvVHK1l/3/dZrUmgec=,tag:Zqx7stHv7nie+08QB9sv4Q==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:X8W7RA==,iv:EU746LVj7398nmAD3lj/16/jFCZVCDNoBYlNwfVEvpM=,tag:ok/T7CjRmS2DWBs3TBJxRA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:cqIOPQ==,iv:3ldoCxVM2e7Bx/lbCwE7m9L+ybn7nbdFaJNu6ibdzvc=,tag:Awrz0bXFZOuIeHCyzvOUAg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:a/JtLdIVsTC/9sE6obOjdeSUuACs9ZAEdSGMy64=,iv:EO8qW0MSxsvHeQgcvCvvVh48I/Sq9xjwIO4rxAgqk6w=,tag:dPGbTokECTg5NJcOshyTZA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:IFtKz3Z141uZt1wnTwIGE6S75SDaiS07lyb2GBL6FipE+jAw,iv:/z2Km+2DVsmKHZ4+fbxRhPZJgkgFfIVVatjnZx1ZIJg=,tag:lIuvoeg+8BjW99dL+LXXfw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:5fvBSYjCnYQUcWtub83LV7J+vnM=,iv:DKQ0wzjGAuxjNBR6E3eMbb9a38h2I5h4mYh+x0M5/jk=,tag:zSAHzkQTeAOXYXR9BUyILA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:93JmVV3ZZc46EIMVJr45u+cgaw7qoYKpXXxR0yXk5lAonf6nUeLW2Uc6US/J,iv:XRBzrziCRBGC7lwWEnUJARiagciHojg/QbA1zrZxG78=,tag:rvzL1LCgW/5CCftl48lyzw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:jmUTasWxk69CkpusWd/uX+6zlpxtC0FDTpPq5MzdtUIBSd3K2UNP5eY=,iv:BBWvGiX1BhcseEubam/dw/vzm+QVlfO+iNZG5qWIhCQ=,tag:Qa7E3jvwyOxe6iifME5Kzw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:PUz0p/ixJ+y+/ENVo2hoCBa6d3CXOVW90uafnkPEZPcSqfd/UdvnNmG5QX0=,iv:9Jp914P6HsEPUGIiqr/nI5b50ih97ykl+ENnRMPz3Ao=,tag:1/4nXPru/J7JX9DbOqa2cw==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:LBNIow==,iv:ioIuwrjV9a9dDEg0yIb4l+f/1unBiqSfvtc6HOCdDwQ=,tag:IrtDD1E7X19UpyHQ3QCH+g==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:PJfsPZBFuVMi5GczuAk=,iv:IeKkmsTKnNp2hA6mSpXerZcfkS/kRZAoP6p8hEV3fsc=,tag:Vx6Y4z/0J/vpcgeWcTlKDg==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:sYDVHiwuk7nelYpU2Jg=,iv:Pqb1KM1cih4GTlKlWAJUCfELwoqD3OK9qq6AOwOlx8w=,tag:d2uSF5HMpUTQAmhpD8AiYA==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:j5dgJo+U/w==,iv:+7Y9eY23sEN9429A6WGNb0fVEIo89TrSHbo2t0NLY/w=,tag:cLl3NlCCIi4zgDrWlAdxoA==,type:str]
+    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:C4QBhA==,iv:iWbwsI56v+pYaoCYXqv9EErpxo4A2E8hYwG8ZGgUGOk=,tag:7W0o+Y2jQwP3Dv/327IGvg==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:8HNJW2k3Wg==,iv:pzi0KcPoEJCrlrfzDpJzLsCrSeQlrmu/lUcDbClwYy4=,tag:yhXiXAVcnWCsNan1deVMqA==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:lwEp/PiOjA==,iv:sox370mIpY5JPPbspIY9QpeYUxEyX/aENiRNx0dLrx4=,tag:u080XCa7t3+lWKcVQ1p8JA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:QCNRPlB2,iv:4QeYTtGjenQA5a8PGuGEAsl+RYUJaGqy4T8tL+CWEeo=,tag:ByHjrDJ+VkYwPwI3HQS8og==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:NLYRmw==,iv:LI7PEwidHLw3EI9M0b2R6HoI2m+oNnpO2jdwbsJUm/c=,tag:S4CHeWN6AkxpPRjz5yjoxA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:vndzd1k=,iv:V+luAtTNi9lmqnN05SGuyisO/rldkuE0SFrfOgZwmEs=,tag:GBTXycSZERig2G4BQ0zCkg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:6d4n4AZ7gRBxSPbP7T9JAfhn8kXwkp7HstDPDPU=,iv:/YwzSX1usycpCPIWd3iTnazHhW+mIvBf/t8zPOhiTsE=,tag:D2qyVsM243FoWKoKDYl0Xw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:QRvC88TyoR0WJova7GczWQqJjqVC3lDAcdiaviK/2fr8fC/R,iv:jTj6bsMAZuUNoiyFFAqdhYmZ6TPGKIcNpJQC/o6dL24=,tag:WspmQ3aQa76F5YvNriJ0SA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:Sq2K7Mhe5vj5+eVAgRSx/1NzpSI=,iv:ktQMR9o+WIknwnyOoJSMvS1jqkI7V7PgTxoPRayfvhk=,tag:+fl/+UpjhWvgWd/AVGXE0A==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:/GHzJWR5nJDjlzZapZvytbO4L32I0PFpnb1yE9PYgOA8Z7p+YhvK9da80uot,iv:/da0j4dzqxzPSuuabxx6Rb3FeaQtNJaTToVKzx9sNBk=,tag:ojH7bny2rLUfXmQnKRx9BA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:H8GAeyD6++O/f4hf/J+v+n58I3PwjAC05Z3TQd3irVknrih52wTdI1Y=,iv:PVhIK4MzWMorXA+trxhOm54dJDDzITl5niT97HgjAoI=,tag:JrwsVc+3NzEKl7Mcv3wRfA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:89R1KiX1/aKjPuCaTo5yq3GUlbHEdo6tMxzcVlhjYF/n1anMkTSqIZIliVY=,iv:QkchGhF4bqlYXN8npfjG6KBgl0tIZCZZ6//2vFZMYJk=,tag:3BMrVTKnzqf+CTAJQTyyzQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKMk1MTTJjSFRsSWJoRTRn
-            UXJRbjJBU05wMldqeG9iaXRxaGRWaE1SQVNRCmQ3Mm5mWjRmcWVsVGlsYWljYmxa
-            NHVFWkpycG9jZUlvTDVPSy84akdsYTQKLS0tIEpqcVFNSHZxRkhZdXZIaExlZHZC
-            UEYvRnZvblJXaGsyK2pXRzVCOWUyYU0KQvQIJVqAYLgVtndcI1OebraC9TbezOVV
-            9DNNFKd86nrrVG5jGlV0wiIZGbaYv83X0ttzKQBw/czetXGgzKHuCg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKL0c2T1RYNWVvVmxNKzM0
+            VTR6eS9KZVFjdk4yQnp3bDMwYzEzN1QxZ2tNClVhUEFtdUMvOCttN1EzUVJYV0NJ
+            SXB6V3hCcWdSQWpPYjJvN0R3R01rOFkKLS0tIFhXdEdjQTVTK0VMaEVDZzlhQUlm
+            Vzc2VUN4eHp0enczWVMvdnZqQVgxR0kKJtmQ+UD85UNqQCDfGh/WpzugGzM1vqaz
+            ekPmi5/8ZAxAXfPNPTR++3gqec0akS9IwkmKiQLMWZyIntY8EqWmLg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-01T05:53:55Z"
-    mac: ENC[AES256_GCM,data:k3DugIzWUg/VNBZ7J4DudM/THqWiYXcnuOUhHS6XRtVzyRZLj2Q9qHzHJqee2uZUO2qc5Wb5+rqk8gb8MqRGbJfk0ajue66OFE/n1NWR1eNLT+LZ5NYZbeWAp+wKDWqS6nLmMePmuCg7f6qV4WCx9Aygj3OULtatfW4jQnhvH3A=,iv:Rv7YmevgANV0VE8lb0In6Z+Sdhodbh9y8o2r2WJ+kAE=,tag:vu2ul1H/BS52tUhFxBtEpA==,type:str]
+    lastmodified: "2023-07-01T06:04:01Z"
+    mac: ENC[AES256_GCM,data:uxPBcoozY93Gyf6ctvHi8eTpA1h5RfwfgKO9u303Dl6iPfctEL/FU2ldM0ESZD5VbUkwitznj21hjgne5DmvDCJmDf5fLOT9waCndUfoTHfkIps9eIO4mIB94GM49OgueKJ7GPzio41+ECSkVTsRlXxNS6Zn2d926IKDeMYnZ6o=,iv:JIvyk/j8+8Vl9AtRnQ2PxrqGhrYuEJA+2eF08WcJFo4=,tag:H4lYxOJXdk8zHJoKQcqCCw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
